--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "core-js": "^3.6.4",
+    "vue": "^2.6.11"
   }
 }
